# shinyProjectGroup

./: .gitignore
Test/: CMakeLists.txt  OpenGLWidget.cpp  OpenGLWidget.h  utility.cpp  utility.h
Test/shader/: fragment.glsl  vertex.glsl
shaderEditor/: CMakeLists.txt  codeeditor.cpp  codeeditor.h  glslhighlighter.cpp  glslhighlighter.h  linenumberarea.cpp  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  myglwidget.cpp  myglwidget.h
unnamed-project/: CMakeLists.txt
unnamed-project/cmake_modules/: FindALUT.cmake
unnamed-project/doc/: doxyfile
unnamed-project/level/: angriffderkilleroktopusse.xml  cathedral1.xml  cathedral2.xml  futureLevel.xml  leereMenge.xml  level1.xml  level1_obscuranceDome.xml  level1copy8maerz.xml  level1terrain.xml  level1testing.xml  level1texting_onlyAreaSampling.xml  levelXbeta.xml  logicMenger2.xml  menger.xml  menger_logic.xml  sphere_animation.xml  sphere_animation2.xml  terrain_with_trees.xml  terraintest.xml  terraintestsmooth.xml  test.xml  testDragon.xml
unnamed-project/shader/: fragment.glsl
unnamed-project/shaders/: copy_array_fragment.glsl  copy_fragment.glsl  copy_fragment_dBuffer.glsl  copy_fragment_dBuffer2.glsl  copy_fragment_dBuffer3.glsl  copy_psychodelic_fragment.glsl  copy_vo_debug_fragment.glsl  copy_wrong_pseudo_random_fragment.glsl  create_moments.glsl  fragment.glsl  fragment_copy.glsl  fragment_copy_vo_debug.glsl  fragment_shadowmap.glsl  fragment_without_cascaded_shadows.glsl  geometry_shadowmap.glsl  horizontal_gauss_compute.glsl  moments_reference.glsl  reduce_min_max_compute.glsl  render_fragment.glsl  render_vertex.glsl  shadowmap_fragment.glsl  shadowmap_geometry.glsl  vertex.glsl  vertex_copy.glsl  vertex_shadowmap.glsl  vertical_gauss_compute.glsl
unnamed-project/shaders/awesome_capture/: awesome_capture_compute.glsl  awesome_capture_fragment.glsl  awesome_capture_vertex.glsl
unnamed-project/shaders/compose/: compose_fragment_clean_area_sampling.glsl  compose_fragment_copy.glsl  compose_fragment_line_sampling_vo.glsl  compose_fragment_moment_vo.glsl  compose_fragment_only_depth.glsl  compose_fragment_variance_area_sampling_vo.glsl  compose_fragment_variance_area_sampling_vo2.glsl  compose_fragment_variance_area_sampling_vo3.glsl  compose_fragment_variance_vo.glsl  compose_fragment_view_moments.glsl  compose_fragment_view_variance.glsl  newMoment.glsl
unnamed-project/shaders/configurations/: MomentVO.xml  VarianceVO.xml  defaultConfig.xml  plainConfig.xml  voDebug.xml  voViewMoments.xml
unnamed-project/shaders/csm/: create_cascades.glsl
unnamed-project/shaders/filter/: horizontal_gauss.glsl  horizontal_vo_area.glsl  vertical_gauss.glsl  vertical_vo_area.glsl
unnamed-project/shaders/lightview/: lightview_fragment.glsl  lightview_samples.glsl  lightview_vertex.glsl
unnamed-project/shaders/reduce/: reduce_compute.glsl  reduce_depth_compute.glsl  reduce_depth_sampler.glsl  reduce_frustum_compute.glsl  reduce_frustum_sampler.glsl  reduce_sampler.glsl
unnamed-project/shaders/render/: render_depth_only_fragment.glsl  render_depth_only_vertex.glsl  render_fragment_experimental_depth_scaling.glsl
unnamed-project/shaders/sdsm/: create_cascade_fars.glsl  create_cascade_views.glsl  reduce_depth_compute.glsl  reduce_depth_sampler.glsl  reduce_frustum_compute.glsl  reduce_frustum_sampler.glsl
unnamed-project/src/: BulletGame.cpp  BulletGame.h  BulletHelper.h  CodeEditor.cpp  CodeEditor.h  EditorWindow.cpp  EditorWindow.h  GLSLHighlighter.cpp  GLSLHighlighter.h  IGame.cpp  IGame.h  IObjectBaseObserver.h  IRenderer.h  KeyManager.cpp  KeyManager.h  LineNumberArea.cpp  MathUtility.cpp  MathUtility.h  Model.cpp  Model.h  Object.cpp  Object.h  ObjectToolbox.cpp  ObjectToolbox.h  OpenGLWidget.cpp  OpenGLWidget.h  PrimitiveGame.cpp  PrimitiveGame.h  Renderer.cpp  Renderer.cpp.orig  Renderer.h  RendererBase.cpp  RendererBase.h  RendererDebugWidget.cpp  RendererDebugWidget.h  Scene.cpp  Scene.h  ShaderEditorBox.cpp  ShaderEditorBox.h  main.cpp  (+3 more)
unnamed-project/src/GameLogic/: ActionBase.cpp  ActionBase.h  Animator.cpp  Animator.h  ArithmeticalAction.cpp  ArithmeticalAction.h  BinaryPreconditionBase.cpp  BinaryPreconditionBase.h  CopyAttributeAction.cpp  CopyAttributeAction.h  Event.cpp  Event.h  FiniteStateMachine.cpp  FiniteStateMachine.h  FlipBooleanAction.cpp  FlipBooleanAction.h  GameLogicDatatypes.h  GameLogicUtility.cpp  GameLogicUtility.h  GlobalState.cpp  GlobalState.h  IsAndPrecondition.cpp  IsAndPrecondition.h  IsEqualPrecondition.cpp  IsEqualPrecondition.h  IsGreaterPrecondition.cpp  IsGreaterPrecondition.h  IsNotPrecondition.cpp  IsNotPrecondition.h  IsOrPrecondition.cpp  (+14 more)
(+216 files in other folders)
